--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 
 <head>
 	<meta charset="UTF-8">
@@ -37,8 +37,10 @@
 						harum doloremque aspernatur quae quasi tenetur sint accusamus numquam consequuntur cumque, consequatur
 						quibusdam?
 					</p>
-					<div>
-						<img src="/assets/parkplan_windsportbereiche.jpg" width="500" alt="">
+					<div class="flex-row">
+						<div class="image-wrapper" style="flex:1.4;">
+							<img src="/assets/parkplan_windsportbereiche.jpg" alt="">
+						</div>
 						<div>
 							<h3>Legend</h3>
 							<ul>
@@ -62,7 +64,7 @@
 		</main>
 		<footer>
 			<div>
-				<p>&copy; 2020 Moritz Clerc, Peer Paschedag</p>
+				<p>&copy;2020 Moritz Clerc, Peer Paschedag</p>
 				<p>Entstanden im Rahmen des Informatik-Wahlpflicht Kurses, unterrichtet von M. Mueller</p>
 			</div>
 		</footer>
