--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 					<p class="byline">Von <span class="author">Peer</span><span class="separator"> // </span>25. Mai 2020</p>
 				</header>
 				<section>
-					<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta assumenda enim, dolore ut quaerat aut illo
-						amet
-						harum doloremque aspernatur quae quasi tenetur sint accusamus numquam consequuntur cumque, consequatur
-						quibusdam?
+					<p>Das Tempelhofer Feld zählt für die meisten in Berlin und Brandenburg lebenden Menschen nicht nur als Lieblingswort, sondern auch als eines vieler Wahrzeichen für Berlin. 
+						Das Tempelhofer Feld wird für verschiedenste Freizeitaktivitäten genutzt zum Beispiel: zum Inlineskaten, Grillen, Joggen, Drachen steigen lassen, Hunde ausführen usw.
+						Das Flughafengebäude beherbergt außerdem viele auf den ersten Blick unerwartete Branchen, vom Polizeipräsidenten bis zur Tanzschule. 
+
 					</p>
 					<div class="flex-row">
 						<div class="image-wrapper" style="flex:1.4;">
@@ -51,13 +51,16 @@
 							</ul>
 						</div>
 					</div>
-					<p>Omnis veritatis doloremque nam ab illo consequuntur veniam inventore voluptatibus exercitationem rerum
-						dolore
-						dolor quidem quo sequi ipsam odit sint, repudiandae totam? Possimus facere accusantium molestias dolores,
-						perspiciatis velit ducimus!</p>
-					<p>Quae inventore culpa iure qui molestiae distinctio deleniti officia excepturi esse! Repellat sequi quos
-						saepe
-						sunt facere quam, blanditiis, repudiandae debitis neque voluptatem sed vitae ut enim dicta quas illum!</p>
+					<p>Die Geschichte des Tempelhofer Felds begann im Jahre 1923, in dem der Flughafen öffnete. 
+						Über die Jahre hinweg wurde das Tempelhofer Feld zu einem geschichtlich bedeutsamen Ort in Berlin. 
+						Bis zur Schließung des Flughafens im Jahre 2008 und die zwei Jahre darauf folgende Neueröffnung als Park, 
+						war die Rolle des Tempelhofer Feldes nicht nur bedeutsam für zum Beispiel die Gründung der „Lufthansa“, 
+						die sich an dem Flughafen aus zwei Unterfirmen zu einer heute immer noch bedeutsamen Fluggesellschaft zusammenschloss. 
+						Man hätte in der Zeit der Berlin Blockade im Westen Berlins wahrscheinlich nicht überlebt, wenn dieser Flughafen nicht als 
+						einziger Landeplatz für die Lieferung an Hilfsgütern bereitgestanden hätte. </p>
+					<p>Nach all diesen bedeutsamen Ereignissen und Funktionen dieses Flughafens, dessen Gebäude von oben übrigens die Form eines Adlers haben sollte,
+						stimmten die Berliner im Jahre 2014 gegen die geplante Bebauung des Rollfeldes und behielten somit die Individualität und die „Freiheit“ des Flugfeldes bei. 
+						Vor kurzem wurde auf dem Tempelhofer Feld außerdem ein Camp für Flüchtlinge erbaut, um ihnen einen Ort zum Wohnen zu bieten.</p>
 
 				</section>
 			</div>
