Fixed sidebar on edge, added content & subpages

--- a/geschichte.html
+++ b/geschichte.html
@@ -13,40 +13,43 @@
 <body>
 	<div id="wrapper">
 		<div id="sidebar">
+			<div id="background-cover"></div>
 			<header>
 				<span>Das</span>
 				<h2>Tempelhofer Feld</h2>
 			</header>
 			<nav>
 				<ul>
-					<li class="nav-entry active"><a href="">Übersicht</a></li>
+					<li class="nav-entry"><a href="index.html">Übersicht</a></li>
 					<li class="nav-entry"><a href="sehenswertes.html">Sehenswertes</a></li>
-					<li class="nav-entry"><a href="geschichte.html">Geschichte</a></li>
+					<li class="nav-entry active"><a href="">Geschichte</a></li>
 				</ul>
 			</nav>
 		</div>
 		<main>
 			<div id="content-wrapper">
 				<header>
-					<h2 class="section-title">Generelles zum Feld</h2>
+					<h2 class="section-title">Geschichte</h2>
 					<p class="byline">Von <span class="author">Peer</span><span class="separator"> // </span>25. Mai 2020</p>
 				</header>
 				<section>
-					<p>Das Tempelhofer Feld zählt für die meisten in Berlin und Brandenburg lebenden Menschen nicht nur als
-						Lieblingswort, sondern auch als eines vieler Wahrzeichen für Berlin.
-						Das Tempelhofer Feld wird für verschiedenste Freizeitaktivitäten genutzt zum Beispiel: zum Inlineskaten,
-						Grillen, Joggen, Drachen steigen lassen, Hunde ausführen usw.
-						Das Flughafengebäude beherbergt außerdem viele auf den ersten Blick unerwartete Branchen, vom
-						Polizeipräsidenten bis zur Tanzschule.
-
-					</p>
 					<div class="flex-row">
-						<div class="image-wrapper" style="flex:1.4;">
-							<img src="/assets/Tempelhofer_feld_map.png" alt="">
+						<div class="image-wrapper" style="flex: 1.6;">
+							<img
+								src="https://upload.wikimedia.org/wikipedia/commons/3/36/Bundesarchiv_Bild_102-02375%2C_Berlin%2C_Tempelhofer_Feld.jpg"
+								alt="">
 						</div>
+						<p class="caption">Flugzeugaufnahme des Feldes vom 1. Mai 1933</p>
 					</div>
-					<p>Die Geschichte des Tempelhofer Felds begann im Jahre 1923, in dem der Flughafen öffnete.
-						Über die Jahre hinweg wurde das Tempelhofer Feld zu einem geschichtlich bedeutsamen Ort in Berlin.
+					<p>Die Geschichte des Tempelhofer Felds begann im Jahre 1923, in dem der Flughafen öffnete. die Jahre hinweg
+						wurde das Tempelhofer Feld zu einem geschichtlich bedeutsamen Ort in Berlin.</p>
+					<div class="flex-row">
+						<div class="image-wrapper" style="flex: 1.6;">
+							<img src="https://live.staticflickr.com/5099/5495010361_d30c5db6ae_b.jpg" alt="">
+						</div>
+						<p class="caption">Ronald Reagan zu Besuch in Westberlin Juni 1982</p>
+					</div>
+					<p>
 						Bis zur Schließung des Flughafens im Jahre 2008 und die zwei Jahre darauf folgende Neueröffnung als Park,
 						war die Rolle des Tempelhofer Feldes nicht nur bedeutsam für zum Beispiel die Gründung der „Lufthansa“,
 						die sich an dem Flughafen aus zwei Unterfirmen zu einer heute immer noch bedeutsamen Fluggesellschaft
