--- a/sehenswertes.html
+++ b/sehenswertes.html
@@ -13,14 +13,15 @@
 <body>
 	<div id="wrapper">
 		<div id="sidebar">
+			<div id="background-cover"></div>
 			<header>
 				<span>Das</span>
 				<h2>Tempelhofer Feld</h2>
 			</header>
 			<nav>
 				<ul>
-					<li class="nav-entry active"><a href="">Übersicht</a></li>
-					<li class="nav-entry"><a href="sehenswertes.html">Sehenswertes</a></li>
+					<li class="nav-entry"><a href="index.html">Übersicht</a></li>
+					<li class="nav-entry active"><a href="">Sehenswertes</a></li>
 					<li class="nav-entry"><a href="geschichte.html">Geschichte</a></li>
 				</ul>
 			</nav>
@@ -28,7 +29,7 @@
 		<main>
 			<div id="content-wrapper">
 				<header>
-					<h2 class="section-title">Generelles zum Feld</h2>
+					<h2 class="section-title">Sehenswertes</h2>
 					<p class="byline">Von <span class="author">Peer</span><span class="separator"> // </span>25. Mai 2020</p>
 				</header>
 				<section>
@@ -45,21 +46,6 @@
 							<img src="/assets/Tempelhofer_feld_map.png" alt="">
 						</div>
 					</div>
-					<p>Die Geschichte des Tempelhofer Felds begann im Jahre 1923, in dem der Flughafen öffnete.
-						Über die Jahre hinweg wurde das Tempelhofer Feld zu einem geschichtlich bedeutsamen Ort in Berlin.
-						Bis zur Schließung des Flughafens im Jahre 2008 und die zwei Jahre darauf folgende Neueröffnung als Park,
-						war die Rolle des Tempelhofer Feldes nicht nur bedeutsam für zum Beispiel die Gründung der „Lufthansa“,
-						die sich an dem Flughafen aus zwei Unterfirmen zu einer heute immer noch bedeutsamen Fluggesellschaft
-						zusammenschloss.
-						Man hätte in der Zeit der Berlin Blockade im Westen Berlins wahrscheinlich nicht überlebt, wenn dieser
-						Flughafen nicht als
-						einziger Landeplatz für die Lieferung an Hilfsgütern bereitgestanden hätte. </p>
-					<p>Nach all diesen bedeutsamen Ereignissen und Funktionen dieses Flughafens, dessen Gebäude von oben übrigens
-						die Form eines Adlers haben sollte,
-						stimmten die Berliner im Jahre 2014 gegen die geplante Bebauung des Rollfeldes und behielten somit die
-						Individualität und die „Freiheit“ des Flugfeldes bei.
-						Vor kurzem wurde auf dem Tempelhofer Feld außerdem ein Camp für Flüchtlinge erbaut, um ihnen einen Ort zum
-						Wohnen zu bieten.</p>
 
 				</section>
 			</div>
