Fixed active navlinks causing page refresh

--- a/geschichte.html
+++ b/geschichte.html
@@ -22,7 +22,7 @@
 				<ul>
 					<li class="nav-entry"><a href="index.html">Übersicht</a></li>
 					<li class="nav-entry"><a href="sehenswertes.html">Sehenswertes</a></li>
-					<li class="nav-entry active"><a href="">Geschichte</a></li>
+					<li class="nav-entry active"><a href="#">Geschichte</a></li>
 				</ul>
 			</nav>
 		</div>
