--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			</header>
 			<nav>
 				<ul>
-					<li class="nav-entry active"><a href="">Übersicht</a></li>
+					<li class="nav-entry active"><a href="#">Übersicht</a></li>
 					<li class="nav-entry"><a href="sehenswertes.html">Sehenswertes</a></li>
 					<li class="nav-entry"><a href="geschichte.html">Geschichte</a></li>
 				</ul>
