--- a/sehenswertes.html
+++ b/sehenswertes.html
@@ -21,7 +21,7 @@
 			<nav>
 				<ul>
 					<li class="nav-entry"><a href="index.html">Übersicht</a></li>
-					<li class="nav-entry active"><a href="">Sehenswertes</a></li>
+					<li class="nav-entry active"><a href="#">Sehenswertes</a></li>
 					<li class="nav-entry"><a href="geschichte.html">Geschichte</a></li>
 				</ul>
 			</nav>
