Removed unneeded CSS and flex-rows, very minor value tweaks

--- a/index.html
+++ b/index.html
@@ -40,11 +40,9 @@
 						Polizeipräsidenten bis zur Tanzschule.
 
 					</p>
-					<div class="flex-row">
-						<div class="image-wrapper" style="flex:1.4;">
+						<div class="image-wrapper">
 							<img src="/assets/Tempelhofer_feld_map.png" alt="">
 						</div>
-					</div>
 					<p>Die Geschichte des Tempelhofer Felds begann im Jahre 1923, in dem der Flughafen öffnete.
 						Über die Jahre hinweg wurde das Tempelhofer Feld zu einem geschichtlich bedeutsamen Ort in Berlin.
 						Bis zur Schließung des Flughafens im Jahre 2008 und die zwei Jahre darauf folgende Neueröffnung als Park,
