Added ul with activities

--- a/sehenswertes.html
+++ b/sehenswertes.html
@@ -39,7 +39,16 @@
 						Grillen, Joggen, Drachen steigen lassen, Hunde ausführen usw.
 						Das Flughafengebäude beherbergt außerdem viele auf den ersten Blick unerwartete Branchen, vom
 						Polizeipräsidenten bis zur Tanzschule.
-
+						<p>
+							Ein paar mögliche Aktivitäten sind...
+							<ul>
+								<li>Skaten</li>
+								<li>Drachen steigen lassen</li>
+								<li>Sich sonnen</li>
+								<li>Tennis spielen</li>
+								<li>Beachvolleyball spielen</li>
+							</ul>
+						</p>
 					</p>
 					<div class="image-wrapper" style="flex:1.4;">
 						<img src="/assets/Tempelhofer_feld_map.png" alt="">
